# TekioPlatform

./: .gitignore  README.md  embedded
Device/: MotionDetection.py  Readme.md  VideoCapture.py
PiCameraReader/: CMakeLists.txt  main.cpp  readme.md
Player/: RemotePlayer.py
Transport/: MqttPublisher.py  MqttSubscriber.py  VideoSenderClient.py  VideoSenderServer.py
VideoCapture/: MqttPublisher.py  MqttSubscriber.py  Player.py  Readme.md  VideoSenderClient.py  VideoSenderServer.py
VideoCapture/Broker/: Dockerfile
docker/: Dockerfile
raspberry/: readme.md
